# g1

./: Cargo.toml  README.org  build.sh  car-cdr-cons-test.g1  euler1.g1  intrinsics.g1  run-tests.sh  test-backticks-and-commas.g1  test-car-cdr-cons.g1  test-comparisons.g1  test-defmacro.g1  test-defun.g1  test-dotimes.g1  test-euler1.g1  test-euler2.g1  test-euler3.g1  test-eval.g1  test-lambda.g1  test-let.g1  test-list.g1  test-loop.g1  test-quote.g1  test-when.g1  test-while.g1  test.g1  test2.g1
built-in/: intrinsics.g1  test-harness.g1
src/: eval.rs  lex.rs  main.rs  sexp.rs
tests/: test-aoc-2023-1-part2.g1  test-aoc-2023-1.g1  test-backtick.g1  test-backticks-and-commas.g1  test-car-cdr-cons.g1  test-comparisons.g1  test-concat-to-symbol.g1  test-defun.g1  test-dolist.g1  test-dotimes.g1  test-euler1.g1  test-euler2.g1  test-euler3.g1  test-euler4.g1  test-euler5.g1  test-int-to-symbol.g1  test-integerp.g1  test-lambda.g1  test-let.g1  test-list.g1  test-loop.g1  test-misc.g1  test-number-sequence.g1  test-quote.g1  test-reverse.g1  test-seq-filter.g1  test-special-character-expansion.g1  test-split-symbol.g1  test-symbols.g1  test-when.g1  test-while.g1
