[package]
name = "g1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
panic = "abort"       # Smaller binary by aborting on panic instead of unwinding
lto = "fat"
codegen-units = 1
debug = false
strip = true
